--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import './mixins/responsive';
 
 @import './modules/forms';
+@import './modules/animations';
 
 @import './layouts/grids';
 @import './layouts/overlay';
