--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -472,6 +472,42 @@ p {
     font-size: 20px;
     color: #8c8d96; }
 
+.fadeIn {
+  animation: fadeIn 2s;
+  -moz-animation: fadeIn 2s;
+  /* Firefox */
+  -webkit-animation: fadeIn 2s;
+  /* Safari and Chrome */
+  -o-animation: fadeIn 2s;
+  /* Opera */ }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@-moz-keyframes fadeIn {
+  /* Firefox */
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@-webkit-keyframes fadeIn {
+  /* Safari and Chrome */
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@-o-keyframes fadeIn {
+  /* Opera */
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .container {
   width: 100%;
   padding: 0 5px;
