--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,16 +40,16 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Roboto", sans-serif;
   --moz-osx-font-smoothing: grayscale;
   --webkit-font-smoothing: antialiased; }
 
 html {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px; }
 
 body {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #3f4150; }
 
 h1 {
@@ -507,6 +507,42 @@ p {
     opacity: 0; }
   to {
     opacity: 1; } }
+
+.fadeOut {
+  animation: fadeOut 2s;
+  -moz-animation: fadeOut 2s;
+  /* Firefox */
+  -webkit-animation: fadeOut 2s;
+  /* Safari and Chrome */
+  -o-animation: fadeOut 2s;
+  /* Opera */ }
+
+@keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+
+@-moz-keyframes fadeOut {
+  /* Firefox */
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+
+@-webkit-keyframes fadeOut {
+  /* Safari and Chrome */
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+
+@-o-keyframes fadeOut {
+  /* Opera */
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 
 .container {
   width: 100%;
