--- a/src/styles/constants/_typography.scss
+++ b/src/styles/constants/_typography.scss
@@ -1,4 +1,4 @@
-$font-main: 'Roboto', sans-serif;
+$font-main: 'NotoSans', sans-serif;
 // $font-price: 'Tahoma', sans-serif;
 
 $font-size-12: 12px;
